fix(linting): done some linting, gear table size field
done som linting on diverse variables where underscores was used.
added size parameter to gear definitions
fixed error in usergear registration list
