# pkg/models/topCategory.go
@@ -1,6 +1,7 @@
 package models
 
+// GearTopCategory represents a gear top category.
 type GearTopCategory struct {
-    TopCategoryId   *int64  `json:"top_category_id" db:"topCategoryId"`
-    TopCategoryName string  `json:"top_category_name" db:"topCategoryName"`
+	TopCategoryID   *int64 `json:"top_category_id" db:"topCategoryId"`
+	TopCategoryName string `json:"top_category_name" db:"topCategoryName"`
 }
